# 0rca-agent-sdk

./: .gitignore  ARCHITECTURE.md  Cleaned.md  Dockerfile  GUIDE.md  MANIFEST.in  README.md  agent_identity.json  agent_local.db  app.py  check_real_money.py  check_total_escrow.py  database.py  example_with_remote_push.py  fund_agent.py  implementation_plan_vault.md  kill_8000.ps1  publish.py  pyproject.toml  real_transfer_interact.py  requirements.txt  settle_and_interact.py  test_endpoint.py  transfer_error.txt  withdraw_error.txt  withdraw_funds.py
contracts-project/: .gitignore  deploy.ps1  deploy_example_vault.ps1  hardhat.config.js  package-lock.json  package.json
dev_tools/: agent_autonomy_setup.py  agno_agent_example.py  check_escrow.py  check_methods.py  check_real_money.py  check_total_escrow.py  inspect_agent.py  interact_with_gemini.py  introspect_usdc.py  real_transfer_interact.py  settle_and_interact.py  test_import.py  verify_user_and_agent.py  withdraw_funds.py
examples/: README.md  basic_agent.py  cdc_agent.py  client_demo.py  client_example.py  contract_agent_example.py  escrow_reader.py  gemini_agent_cronos.py  interact.py  simple_task_agent.py  task_based_orchestration_demo.py
examples/mcp-agent/: app.py  (+8 more)
orca_agent_sdk/: __init__.py  __main__.py  agent.py  cdc_agent.py  config.py  constants.py  contract_agent.py  paywall.py  server.py
orca_agent_sdk.egg-info/: SOURCES.txt
scripts/: extract_abis.py
tests/: check_onchain_task.py  test_a2a.py  test_backend_direct.py  test_contract_tools.py  test_full_flow.py  test_payment.py  test_server.py
(+68 files in other folders)
