[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orca-network-sdk"
version = "1.0.8"
description = "Production-ready Python SDK for launching, monetizing, and orchestrating AI Agents via ERC-8004"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "0rca Network", email = "contact@0rca.network"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
    "requests>=2.25.0",
    "web3>=7.0.0",
    "eth-account>=0.13.0",
]

[project.optional-dependencies]
agno = ["agno"]

[project.scripts]
orca-agent = "orca_agent_sdk.__main__:main"

[tool.setuptools.packages.find]
include = ["orca_agent_sdk*"]

[project.urls]
Homepage = "https://github.com/0rca-network/0rca-agent-sdk"
Repository = "https://github.com/0rca-network/0rca-agent-sdk"
Issues = "https://github.com/0rca-network/0rca-agent-sdk/issues"